--- a/genindex.html
+++ b/genindex.html
@@ -86,6 +86,8 @@
       <ul>
         <li><a href="api_reference.html#module-silverspeak">silverspeak</a>
 </li>
+        <li><a href="api_reference.html#module-silverspeak.homoglyphs">silverspeak.homoglyphs</a>
+</li>
       </ul></li>
   </ul></td>
 </tr></table>
@@ -98,6 +100,15 @@
 
       <ul>
         <li><a href="api_reference.html#module-silverspeak">module</a>
+</li>
+      </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li>
+    silverspeak.homoglyphs
+
+      <ul>
+        <li><a href="api_reference.html#module-silverspeak.homoglyphs">module</a>
 </li>
       </ul></li>
   </ul></td>
